# handlers/gvmt/changeThreshold.go
@@ -12,7 +12,7 @@ import (
 // @Tags         gvmt(admin)
 // @Accept       json
 // @Produce      json
-// @Param         object body models.ChangeThresholdReq
+// @Param       object body models.ChangeThresholdReq true "修改某个指标的阈值"
 // @Success 200 object models.SuccessResponse
 // @Router       /gvmt/changeThreshold [post]
 // @Security ApiKeyAuth
@@ -25,7 +25,13 @@ func ChangeThreshold(c *gin.Context) {
 		})
 		return
 	}
-	drivers.MysqlDb.Table("threshold").Where("features = ?", threshold.Feature).Update("threshold", threshold.Threshold)
+	if threshold.Features == "" {
+		c.JSON(400, gin.H{
+			"error": "feature is empty(hint:feature or features?)",
+		})
+		return
+	}
+	drivers.MysqlDb.Table("threshold").Where("features = ?", threshold.Features).Update("threshold", threshold.Threshold)
 	c.JSON(http.StatusOK, gin.H{
 		"code": 200,
 		"msg":  "success",
